# confmapper

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  confmapper.yml  jiconfi.yml  sample.env
.github/workflows/: docker-image.yml  rust.yml
src/: conference.rs  main.rs  phone_list.rs
