[package]
name = "confmapper"
description = "Jitsi Dial-In Mapper API"
authors = ["Ian McLinden"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.8.0"
actix-web = "4.3.1"
env_logger = "0.10.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
sled = "0.34.7"
structopt = { version = "0.3.26", default-features = false }
urlencoding = "2.1.2"
